Pass presentation filePath and track file paths
Add filePath propagation for presentations and persist it in the companion server. Updated callback signatures (MainDesktop, PresentationTab, main) to include filePath and forward it to CompanionServer.updatePresentation. CompanionServer now stores _presentationFilePaths, records paths from updatePresentation and schedule parsing, and uses them to resolve presentations by id/file-hash when handling API requests. Also merged rendered and tab-loaded presentation catalogs for GET /api/presentations, improved schedule AddToSchedule parsing to accept companion-format DTOs (with fallbacks), and simplified exception handling around server start (swallowing and ignoring bind/general exceptions instead of logging). These changes allow presentation items identified by id/hash to be resolved back to their original file paths (needed for mobile/companion compatibility) and avoid duplicate background renders.